Update dependencies and fix Travis tests:
* Scala updated to 2.12.7
* SBT for the template project updated to 0.13.17
* sbt-giter8 plugin updated to 0.11.0
* Generated project dependencies updated to their latest versions (nscala-time, scalatest & scalamock)
* sbt-scalafmt updated to 1.5.1
* Parametrized the SBT version to install in the generated project. Defaults to 1.2.6